# Meeting-Presentations

./: README.md
2015/03-CMake_Von_Hello_World/: autoreload.html  index.html  slides.md  style.css
2015/03-CMake_Von_Hello_World/example1/: CMakeLists.txt  main.cpp
2015/03-CMake_Von_Hello_World/example1/libprint/: CMakeLists.txt  print.hpp
2015/03-CMake_Von_Hello_World/example2/: CMakeLists.txt
2015/03-CMake_Von_Hello_World/example2/Print/: CMakeLists.txt  PrintConfig.cmake.in  print.cpp
2015/03-CMake_Von_Hello_World/example2/main/: CMakeLists.txt
2015/03-qualitytools_cpp/: server.sh  slides.md  style.css
2015/03-qualitytools_cpp/example/: examples.cpp
2015/09-acceptance_testing/: Acceptance Testing of a.pptx
2015/10-template_meta_programming_introduction/: PrintGenericallyInDepth2.pptx
2016/08-Template_Meta_Programming/: PGDB_ResultProcessor4UGC++.pptx
2018/2018-10-25/: Pramatisches Denken und Lernen.md
